// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Toggle examples ModelDrivenFbToggleComponent should render correctly 1`] = `
<div>
  <form
    class="ng-untouched ng-dirty ng-valid v-gap-16 v-flex v-flex-col v-mt-16"
    novalidate=""
    vflex=""
    vflexcol=""
    vgap="16"
    vmt="16"
  >
    <fieldset
      aria-labelledby="model-fb-toggle-label model-fb-toggle-message"
    >
      <legend
        class="v-label v-typography-label"
        id="model-fb-toggle-label"
        v-label=""
        vtypography="label"
      >
         Group label (required) 
      </legend>
      <div
        aria-invalid="false"
        class="v-toggle-container ng-untouched ng-dirty ng-valid v-gap-0 v-flex v-flex-row"
        formcontrolname="toggleControl"
        required=""
        v-toggle-container=""
        vflex=""
        vgap="0"
      >
        <button
          aria-pressed="false"
          class="v-toggle v-gap-6"
          type="button"
          v-toggle=""
          value="1"
          vgap="6"
        >
          Label 1
        </button>
        <button
          aria-pressed="true"
          class="v-toggle v-gap-6"
          type="button"
          v-toggle=""
          value="2"
          vgap="6"
        >
          Label 2
        </button>
        <button
          aria-pressed="false"
          class="v-toggle v-gap-6"
          type="button"
          v-toggle=""
          value="3"
          vgap="6"
        >
          Label 3
        </button>
      </div>
      <span
        aria-atomic="true"
        aria-live="assertive"
        class="v-input-message"
        id="model-fb-toggle-message"
        v-input-message=""
      >
        
      </span>
    </fieldset>
    <div
      class="v-gap-16 v-flex v-flex-row v-mt-8"
      vflex=""
      vgap="16"
      vmt="8"
    >
      <button
        class="v-button"
        type="submit"
        v-button=""
      >
        Submit
      </button>
      <button
        buttoncolor="secondary"
        class="v-button v-button-secondary"
        type="reset"
        v-button=""
      >
        Reset
      </button>
    </div>
  </form>
  <code>
    formValidation.value['toggleControl']: 2
  </code>
</div>
`;

exports[`Toggle examples ModelDrivenFormToggleComponent should render correctly 1`] = `
<div>
  <form
    class="ng-untouched ng-dirty ng-valid v-gap-16 v-flex v-flex-col v-mt-16"
    novalidate=""
    vflex=""
    vflexcol=""
    vgap="16"
    vmt="16"
  >
    <fieldset
      aria-labelledby="model-toggle-label model-toggle-message"
    >
      <legend
        class="v-label v-typography-label"
        id="model-toggle-label"
        v-label=""
        vtypography="label"
      >
         Group label (required) 
      </legend>
      <div
        aria-invalid="false"
        class="v-toggle-container ng-untouched ng-dirty ng-valid v-gap-0 v-flex v-flex-row"
        formcontrolname="toggleControl"
        v-toggle-container=""
        vflex=""
        vgap="0"
      >
        <button
          aria-pressed="false"
          class="v-toggle"
          type="button"
          v-toggle=""
          value="1"
        >
          Label 1
        </button>
        <button
          aria-pressed="true"
          class="v-toggle"
          type="button"
          v-toggle=""
          value="2"
        >
          Label 2
        </button>
        <button
          aria-pressed="false"
          class="v-toggle"
          type="button"
          v-toggle=""
          value="3"
        >
          Label 3
        </button>
      </div>
      <span
        aria-atomic="true"
        aria-live="assertive"
        class="v-input-message"
        id="model-toggle-message"
        v-input-message=""
      >
        
      </span>
    </fieldset>
    <div
      class="v-gap-16 v-flex v-flex-row v-mt-8"
      vflex=""
      vgap="16"
      vmt="8"
    >
      <button
        class="v-button"
        type="submit"
        v-button=""
      >
        Submit
      </button>
      <button
        buttoncolor="secondary"
        class="v-button v-button-secondary"
        type="reset"
        v-button=""
      >
        Reset
      </button>
    </div>
  </form>
  <code>
    formValidation.value['toggleControl']: 2
  </code>
</div>
`;

exports[`Toggle examples MultiSelectCheckboxesToggleComponent should render correctly 1`] = `
<div>
  <fieldset
    class="v-toggle-container"
    v-toggle-container=""
  >
    <label
      aria-label="Label 1"
      class="v-toggle v-gap-6 v-toggle-icon"
      for="a-v-checkbox-0"
      toggleicon=""
      v-toggle=""
      vgap="6"
    >
      <input
        checked="checked"
        class="v-checkbox"
        id="a-v-checkbox-0"
        name="v-toggle-6"
        type="checkbox"
        v-checkbox=""
      />
      <svg
        aria-hidden="true"
        class="v-icon v-icon-low v-icon-map-location v-icon-visa"
        focusable="false"
        height="24"
        v-icon-visa-map-location-low=""
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          class="v-icon-secondary"
          d="M12 5.00098C13.93 5.00098 15.5 6.57098 15.5 8.50098C15.5 10.431 13.93 12.001 12 12.001C10.07 12.001 8.5 10.431 8.5 8.50098C8.5 6.57098 10.07 5.00098 12 5.00098ZM12 7.00098C11.17 7.00098 10.5 7.67098 10.5 8.50098C10.5 9.33098 11.17 10.001 12 10.001C12.83 10.001 13.5 9.33098 13.5 8.50098C13.5 7.67098 12.83 7.00098 12 7.00098Z"
        />
        <path
          class="v-icon-primary"
          d="M12.3398 1.00098C16.5296 1.00113 19.9392 4.41086 19.9395 8.60059C19.9395 9.98055 19.5593 11.3308 18.8594 12.5107L12.8594 22.5107H11.1494L5.14941 12.5107C2.98961 8.92077 4.16008 4.24101 7.75 2.08105C8.92982 1.37123 10.2794 1.00104 11.6592 1.00098H12.3398ZM11.6592 3.00098C10.6393 3.00104 9.64919 3.28084 8.7793 3.80078C6.12938 5.39081 5.2694 8.84124 6.85938 11.4912L12 20.0605L17.1396 11.4912C17.6596 10.6213 17.9394 9.62121 17.9395 8.61133C17.9395 5.52143 15.4297 3.0109 12.3398 3.01074H11.6592V3.00098Z"
        />
      </svg>
    </label>
    <label
      aria-label="Label 2"
      class="v-toggle v-gap-6 v-toggle-icon"
      for="a-v-checkbox-1"
      toggleicon=""
      v-toggle=""
      vgap="6"
    >
      <input
        class="v-checkbox"
        id="a-v-checkbox-1"
        name="v-toggle-6"
        type="checkbox"
        v-checkbox=""
      />
      <svg
        aria-hidden="true"
        class="v-icon v-icon-low v-icon-view-list v-icon-visa"
        focusable="false"
        height="24"
        v-icon-visa-view-list-low=""
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          class="v-icon-secondary"
          d="M11 20H4V13H11V20ZM6 18H9V15H6V18ZM20 17.5H13V15.5H20V17.5ZM11 11H4V4H11V11ZM6 9H9V6H6V9ZM20 8.5H13V6.5H20V8.5Z"
        />
        <path
          class="v-icon-primary"
          d="M21 0C22.65 0 24 1.35 24 3V21C24 22.65 22.65 24 21 24H3C1.35 24 0 22.65 0 21V3C0 1.35 1.35 0 3 0H21ZM3 2C2.45 2 2 2.45 2 3V21C2 21.55 2.45 22 3 22H21C21.55 22 22 21.55 22 21V3C22 2.45 21.55 2 21 2H3Z"
        />
        <defs>
          <clippath>
            <rect
              height="24"
              width="24"
            />
          </clippath>
        </defs>
      </svg>
    </label>
    <label
      aria-label="Label 3"
      class="v-toggle v-gap-6 v-toggle-icon"
      for="a-v-checkbox-2"
      toggleicon=""
      v-toggle=""
      vgap="6"
    >
      <input
        checked="checked"
        class="v-checkbox"
        id="a-v-checkbox-2"
        name="v-toggle-6"
        type="checkbox"
        v-checkbox=""
      />
      <svg
        aria-hidden="true"
        class="v-icon v-icon-low v-icon-view-grid v-icon-visa"
        focusable="false"
        height="24"
        v-icon-visa-view-grid-low=""
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          class="v-icon-secondary"
          d="M11 20H4V13H11V20ZM20 20H13V13H20V20ZM6 18H9V15H6V18ZM15 18H18V15H15V18ZM11 11H4V4H11V11ZM20 11H13V4H20V11ZM6 9H9V6H6V9ZM15 9H18V6H15V9Z"
        />
        <path
          class="v-icon-primary"
          d="M21 0C22.65 0 24 1.35 24 3V21C24 22.65 22.65 24 21 24H3C1.35 24 0 22.65 0 21V3C0 1.35 1.35 0 3 0H21ZM3 2C2.45 2 2 2.45 2 3V21C2 21.55 2.45 22 3 22H21C21.55 22 22 21.55 22 21V3C22 2.45 21.55 2 21 2H3Z"
        />
        <defs>
          <clippath>
            <rect
              height="24"
              width="24"
            />
          </clippath>
        </defs>
      </svg>
    </label>
  </fieldset>
</div>
`;

exports[`Toggle examples NovaMultiSelectToggleComponent should render correctly 1`] = `
<div>
  <fieldset
    class="v-toggle-container"
    multiselect=""
    v-toggle-container=""
  >
    <button
      active=""
      aria-label="Label 1"
      aria-pressed="true"
      class="v-toggle v-gap-6 v-toggle-icon"
      toggleicon=""
      type="button"
      v-toggle=""
      vgap="6"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-low v-icon-map-location v-icon-visa"
        focusable="false"
        height="24"
        v-icon-visa-map-location-low=""
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          class="v-icon-secondary"
          d="M12 5.00098C13.93 5.00098 15.5 6.57098 15.5 8.50098C15.5 10.431 13.93 12.001 12 12.001C10.07 12.001 8.5 10.431 8.5 8.50098C8.5 6.57098 10.07 5.00098 12 5.00098ZM12 7.00098C11.17 7.00098 10.5 7.67098 10.5 8.50098C10.5 9.33098 11.17 10.001 12 10.001C12.83 10.001 13.5 9.33098 13.5 8.50098C13.5 7.67098 12.83 7.00098 12 7.00098Z"
        />
        <path
          class="v-icon-primary"
          d="M12.3398 1.00098C16.5296 1.00113 19.9392 4.41086 19.9395 8.60059C19.9395 9.98055 19.5593 11.3308 18.8594 12.5107L12.8594 22.5107H11.1494L5.14941 12.5107C2.98961 8.92077 4.16008 4.24101 7.75 2.08105C8.92982 1.37123 10.2794 1.00104 11.6592 1.00098H12.3398ZM11.6592 3.00098C10.6393 3.00104 9.64919 3.28084 8.7793 3.80078C6.12938 5.39081 5.2694 8.84124 6.85938 11.4912L12 20.0605L17.1396 11.4912C17.6596 10.6213 17.9394 9.62121 17.9395 8.61133C17.9395 5.52143 15.4297 3.0109 12.3398 3.01074H11.6592V3.00098Z"
        />
      </svg>
    </button>
    <button
      aria-label="Label 2"
      aria-pressed="false"
      class="v-toggle v-gap-6 v-toggle-icon"
      toggleicon=""
      type="button"
      v-toggle=""
      vgap="6"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-low v-icon-view-list v-icon-visa"
        focusable="false"
        height="24"
        v-icon-visa-view-list-low=""
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          class="v-icon-secondary"
          d="M11 20H4V13H11V20ZM6 18H9V15H6V18ZM20 17.5H13V15.5H20V17.5ZM11 11H4V4H11V11ZM6 9H9V6H6V9ZM20 8.5H13V6.5H20V8.5Z"
        />
        <path
          class="v-icon-primary"
          d="M21 0C22.65 0 24 1.35 24 3V21C24 22.65 22.65 24 21 24H3C1.35 24 0 22.65 0 21V3C0 1.35 1.35 0 3 0H21ZM3 2C2.45 2 2 2.45 2 3V21C2 21.55 2.45 22 3 22H21C21.55 22 22 21.55 22 21V3C22 2.45 21.55 2 21 2H3Z"
        />
        <defs>
          <clippath>
            <rect
              height="24"
              width="24"
            />
          </clippath>
        </defs>
      </svg>
    </button>
    <button
      aria-label="Label 3"
      aria-pressed="false"
      class="v-toggle v-gap-6 v-toggle-icon"
      toggleicon=""
      type="button"
      v-toggle=""
      vgap="6"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-low v-icon-view-grid v-icon-visa"
        focusable="false"
        height="24"
        v-icon-visa-view-grid-low=""
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          class="v-icon-secondary"
          d="M11 20H4V13H11V20ZM20 20H13V13H20V20ZM6 18H9V15H6V18ZM15 18H18V15H15V18ZM11 11H4V4H11V11ZM20 11H13V4H20V11ZM6 9H9V6H6V9ZM15 9H18V6H15V9Z"
        />
        <path
          class="v-icon-primary"
          d="M21 0C22.65 0 24 1.35 24 3V21C24 22.65 22.65 24 21 24H3C1.35 24 0 22.65 0 21V3C0 1.35 1.35 0 3 0H21ZM3 2C2.45 2 2 2.45 2 3V21C2 21.55 2.45 22 3 22H21C21.55 22 22 21.55 22 21V3C22 2.45 21.55 2 21 2H3Z"
        />
        <defs>
          <clippath>
            <rect
              height="24"
              width="24"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </fieldset>
</div>
`;

exports[`Toggle examples NovaStandaloneMultiSelectToggleComponent should render correctly 1`] = `
<div>
  <fieldset
    class="v-toggle-container"
    multiselect=""
    v-toggle-container=""
  >
    <button
      aria-label="Label 1"
      aria-pressed="false"
      class="v-toggle v-gap-6 v-toggle-icon"
      toggleicon=""
      type="button"
      v-toggle=""
      vgap="6"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-low v-icon-map-location v-icon-visa"
        focusable="false"
        height="24"
        v-icon-visa-map-location-low=""
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          class="v-icon-secondary"
          d="M12 5.00098C13.93 5.00098 15.5 6.57098 15.5 8.50098C15.5 10.431 13.93 12.001 12 12.001C10.07 12.001 8.5 10.431 8.5 8.50098C8.5 6.57098 10.07 5.00098 12 5.00098ZM12 7.00098C11.17 7.00098 10.5 7.67098 10.5 8.50098C10.5 9.33098 11.17 10.001 12 10.001C12.83 10.001 13.5 9.33098 13.5 8.50098C13.5 7.67098 12.83 7.00098 12 7.00098Z"
        />
        <path
          class="v-icon-primary"
          d="M12.3398 1.00098C16.5296 1.00113 19.9392 4.41086 19.9395 8.60059C19.9395 9.98055 19.5593 11.3308 18.8594 12.5107L12.8594 22.5107H11.1494L5.14941 12.5107C2.98961 8.92077 4.16008 4.24101 7.75 2.08105C8.92982 1.37123 10.2794 1.00104 11.6592 1.00098H12.3398ZM11.6592 3.00098C10.6393 3.00104 9.64919 3.28084 8.7793 3.80078C6.12938 5.39081 5.2694 8.84124 6.85938 11.4912L12 20.0605L17.1396 11.4912C17.6596 10.6213 17.9394 9.62121 17.9395 8.61133C17.9395 5.52143 15.4297 3.0109 12.3398 3.01074H11.6592V3.00098Z"
        />
      </svg>
    </button>
  </fieldset>
</div>
`;

exports[`Toggle examples NovaToggleDefaultComponent should render correctly 1`] = `
<div>
  <fieldset
    class="v-toggle-container"
    v-toggle-container=""
  >
    <button
      active=""
      aria-pressed="true"
      class="v-toggle v-gap-6"
      type="button"
      v-toggle=""
      vgap="6"
    >
      Label 1
    </button>
    <button
      aria-pressed="false"
      class="v-toggle v-gap-6"
      type="button"
      v-toggle=""
      vgap="6"
    >
      Label 2
    </button>
    <button
      aria-pressed="false"
      class="v-toggle v-gap-6"
      type="button"
      v-toggle=""
      vgap="6"
    >
      Label 3
    </button>
  </fieldset>
</div>
`;

exports[`Toggle examples NovaToggleDisabledComponent should render correctly 1`] = `
<div>
  <fieldset
    class="v-toggle-container"
    disabled="disabled"
    v-toggle-container=""
  >
    <button
      aria-disabled="true"
      aria-pressed="false"
      class="v-toggle v-gap-6"
      disabled="disabled"
      type="button"
      v-toggle=""
      vgap="6"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-map-location v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-map-location-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-secondary"
          d="M8 4C9.10457 4 10 4.89543 10 6C10 7.10457 9.10457 8 8 8C6.89543 8 6 7.10457 6 6C6 4.89543 6.89543 4 8 4Z"
        />
        <path
          class="v-icon-primary"
          d="M8.48145 0C11.5292 0.000167496 13.9998 2.47082 14 5.51855C14 6.67384 13.6758 7.80644 13.0635 8.78613L8 16.8867L2.93652 8.78613C2.32425 7.80644 2 6.67384 2 5.51855C2.00017 2.47082 4.47082 0.000167494 7.51855 0H8.48145ZM7.51855 2C5.57539 2.00017 4.00017 3.57539 4 5.51855C4 6.2989 4.21931 7.06382 4.63281 7.72559L8 13.1133L11.3672 7.72559C11.7807 7.06382 12 6.2989 12 5.51855C11.9998 3.57539 10.4246 2.00017 8.48145 2H7.51855Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
       Label 1 
    </button>
    <button
      aria-disabled="true"
      aria-pressed="false"
      class="v-toggle v-gap-6"
      disabled="disabled"
      type="button"
      v-toggle=""
      vgap="6"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-tiny v-icon-view-list v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-view-list-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M6 8.99219V14.9922H0V8.99219H6ZM2 12.9922H4V10.9922H2V12.9922ZM16 12.9922H8V10.9922H16V12.9922ZM6 6.99219H0V0.992188H6V6.99219ZM2 4.99219H4V2.99219H2V4.99219ZM16 4.99219H8V2.99219H16V4.99219Z"
        />
      </svg>
       Label 2 
    </button>
    <button
      aria-disabled="true"
      aria-pressed="false"
      class="v-toggle v-gap-6"
      disabled="disabled"
      type="button"
      v-toggle=""
      vgap="6"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-tiny v-icon-view-grid v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-view-grid-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M7 14.9922H1V8.99219H7V14.9922ZM15 8.99219V14.9922H9V8.99219H15ZM3 12.9922H5V10.9922H3V12.9922ZM11 12.9922H13V10.9922H11V12.9922ZM7 6.99219H1V0.992188H7V6.99219ZM15 6.99219H9V0.992188H15V6.99219ZM3 4.99219H5V2.99219H3V4.99219ZM11 4.99219H13V2.99219H11V4.99219Z"
        />
      </svg>
       Label 3 
    </button>
  </fieldset>
</div>
`;

exports[`Toggle examples NovaToggleIconOnlyComponent should render correctly 1`] = `
<div>
  <fieldset
    class="v-toggle-container"
    v-toggle-container=""
  >
    <button
      active=""
      aria-label="Label 1"
      aria-pressed="true"
      class="v-toggle v-gap-6 v-toggle-icon"
      toggleicon=""
      type="button"
      v-toggle=""
      vgap="6"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-low v-icon-map-location v-icon-visa"
        focusable="false"
        height="24"
        v-icon-visa-map-location-low=""
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          class="v-icon-secondary"
          d="M12 5.00098C13.93 5.00098 15.5 6.57098 15.5 8.50098C15.5 10.431 13.93 12.001 12 12.001C10.07 12.001 8.5 10.431 8.5 8.50098C8.5 6.57098 10.07 5.00098 12 5.00098ZM12 7.00098C11.17 7.00098 10.5 7.67098 10.5 8.50098C10.5 9.33098 11.17 10.001 12 10.001C12.83 10.001 13.5 9.33098 13.5 8.50098C13.5 7.67098 12.83 7.00098 12 7.00098Z"
        />
        <path
          class="v-icon-primary"
          d="M12.3398 1.00098C16.5296 1.00113 19.9392 4.41086 19.9395 8.60059C19.9395 9.98055 19.5593 11.3308 18.8594 12.5107L12.8594 22.5107H11.1494L5.14941 12.5107C2.98961 8.92077 4.16008 4.24101 7.75 2.08105C8.92982 1.37123 10.2794 1.00104 11.6592 1.00098H12.3398ZM11.6592 3.00098C10.6393 3.00104 9.64919 3.28084 8.7793 3.80078C6.12938 5.39081 5.2694 8.84124 6.85938 11.4912L12 20.0605L17.1396 11.4912C17.6596 10.6213 17.9394 9.62121 17.9395 8.61133C17.9395 5.52143 15.4297 3.0109 12.3398 3.01074H11.6592V3.00098Z"
        />
      </svg>
    </button>
    <button
      aria-label="Label 2"
      aria-pressed="false"
      class="v-toggle v-gap-6 v-toggle-icon"
      toggleicon=""
      type="button"
      v-toggle=""
      vgap="6"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-low v-icon-view-list v-icon-visa"
        focusable="false"
        height="24"
        v-icon-visa-view-list-low=""
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          class="v-icon-secondary"
          d="M11 20H4V13H11V20ZM6 18H9V15H6V18ZM20 17.5H13V15.5H20V17.5ZM11 11H4V4H11V11ZM6 9H9V6H6V9ZM20 8.5H13V6.5H20V8.5Z"
        />
        <path
          class="v-icon-primary"
          d="M21 0C22.65 0 24 1.35 24 3V21C24 22.65 22.65 24 21 24H3C1.35 24 0 22.65 0 21V3C0 1.35 1.35 0 3 0H21ZM3 2C2.45 2 2 2.45 2 3V21C2 21.55 2.45 22 3 22H21C21.55 22 22 21.55 22 21V3C22 2.45 21.55 2 21 2H3Z"
        />
        <defs>
          <clippath>
            <rect
              height="24"
              width="24"
            />
          </clippath>
        </defs>
      </svg>
    </button>
    <button
      aria-label="Label 3"
      aria-pressed="false"
      class="v-toggle v-gap-6 v-toggle-icon"
      toggleicon=""
      type="button"
      v-toggle=""
      vgap="6"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-low v-icon-view-grid v-icon-visa"
        focusable="false"
        height="24"
        v-icon-visa-view-grid-low=""
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          class="v-icon-secondary"
          d="M11 20H4V13H11V20ZM20 20H13V13H20V20ZM6 18H9V15H6V18ZM15 18H18V15H15V18ZM11 11H4V4H11V11ZM20 11H13V4H20V11ZM6 9H9V6H6V9ZM15 9H18V6H15V9Z"
        />
        <path
          class="v-icon-primary"
          d="M21 0C22.65 0 24 1.35 24 3V21C24 22.65 22.65 24 21 24H3C1.35 24 0 22.65 0 21V3C0 1.35 1.35 0 3 0H21ZM3 2C2.45 2 2 2.45 2 3V21C2 21.55 2.45 22 3 22H21C21.55 22 22 21.55 22 21V3C22 2.45 21.55 2 21 2H3Z"
        />
        <defs>
          <clippath>
            <rect
              height="24"
              width="24"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </fieldset>
</div>
`;

exports[`Toggle examples NovaToggleOneButtonDisabledComponent should render correctly 1`] = `
<div>
  <fieldset
    class="v-toggle-container"
    v-toggle-container=""
  >
    <button
      active=""
      aria-label="Label 1"
      aria-pressed="true"
      class="v-toggle v-gap-6"
      type="button"
      v-toggle=""
      vgap="6"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-map-location v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-map-location-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-secondary"
          d="M8 4C9.10457 4 10 4.89543 10 6C10 7.10457 9.10457 8 8 8C6.89543 8 6 7.10457 6 6C6 4.89543 6.89543 4 8 4Z"
        />
        <path
          class="v-icon-primary"
          d="M8.48145 0C11.5292 0.000167496 13.9998 2.47082 14 5.51855C14 6.67384 13.6758 7.80644 13.0635 8.78613L8 16.8867L2.93652 8.78613C2.32425 7.80644 2 6.67384 2 5.51855C2.00017 2.47082 4.47082 0.000167494 7.51855 0H8.48145ZM7.51855 2C5.57539 2.00017 4.00017 3.57539 4 5.51855C4 6.2989 4.21931 7.06382 4.63281 7.72559L8 13.1133L11.3672 7.72559C11.7807 7.06382 12 6.2989 12 5.51855C11.9998 3.57539 10.4246 2.00017 8.48145 2H7.51855Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
    <button
      aria-label="Label 2"
      aria-pressed="false"
      class="v-toggle v-gap-6"
      type="button"
      v-toggle=""
      vgap="6"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-tiny v-icon-view-list v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-view-list-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M6 8.99219V14.9922H0V8.99219H6ZM2 12.9922H4V10.9922H2V12.9922ZM16 12.9922H8V10.9922H16V12.9922ZM6 6.99219H0V0.992188H6V6.99219ZM2 4.99219H4V2.99219H2V4.99219ZM16 4.99219H8V2.99219H16V4.99219Z"
        />
      </svg>
    </button>
    <button
      aria-disabled="true"
      aria-label="Label 3"
      aria-pressed="false"
      class="v-toggle v-gap-6"
      disabled="disabled"
      type="button"
      v-toggle=""
      vgap="6"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-tiny v-icon-view-grid v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-view-grid-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M7 14.9922H1V8.99219H7V14.9922ZM15 8.99219V14.9922H9V8.99219H15ZM3 12.9922H5V10.9922H3V12.9922ZM11 12.9922H13V10.9922H11V12.9922ZM7 6.99219H1V0.992188H7V6.99219ZM15 6.99219H9V0.992188H15V6.99219ZM3 4.99219H5V2.99219H3V4.99219ZM11 4.99219H13V2.99219H11V4.99219Z"
        />
      </svg>
    </button>
  </fieldset>
</div>
`;

exports[`Toggle examples NovaToggleWithLeadingIconComponent should render correctly 1`] = `
<div>
  <fieldset
    class="v-toggle-container"
    v-toggle-container=""
  >
    <button
      active=""
      aria-pressed="true"
      class="v-toggle v-gap-6"
      type="button"
      v-toggle=""
      vgap="6"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-map-location v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-map-location-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-secondary"
          d="M8 4C9.10457 4 10 4.89543 10 6C10 7.10457 9.10457 8 8 8C6.89543 8 6 7.10457 6 6C6 4.89543 6.89543 4 8 4Z"
        />
        <path
          class="v-icon-primary"
          d="M8.48145 0C11.5292 0.000167496 13.9998 2.47082 14 5.51855C14 6.67384 13.6758 7.80644 13.0635 8.78613L8 16.8867L2.93652 8.78613C2.32425 7.80644 2 6.67384 2 5.51855C2.00017 2.47082 4.47082 0.000167494 7.51855 0H8.48145ZM7.51855 2C5.57539 2.00017 4.00017 3.57539 4 5.51855C4 6.2989 4.21931 7.06382 4.63281 7.72559L8 13.1133L11.3672 7.72559C11.7807 7.06382 12 6.2989 12 5.51855C11.9998 3.57539 10.4246 2.00017 8.48145 2H7.51855Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
       Label 1 
    </button>
    <button
      aria-pressed="false"
      class="v-toggle v-gap-6"
      type="button"
      v-toggle=""
      vgap="6"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-tiny v-icon-view-list v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-view-list-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M6 8.99219V14.9922H0V8.99219H6ZM2 12.9922H4V10.9922H2V12.9922ZM16 12.9922H8V10.9922H16V12.9922ZM6 6.99219H0V0.992188H6V6.99219ZM2 4.99219H4V2.99219H2V4.99219ZM16 4.99219H8V2.99219H16V4.99219Z"
        />
      </svg>
       Label 2 
    </button>
    <button
      aria-pressed="false"
      class="v-toggle v-gap-6"
      type="button"
      v-toggle=""
      vgap="6"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-tiny v-icon-view-grid v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-view-grid-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M7 14.9922H1V8.99219H7V14.9922ZM15 8.99219V14.9922H9V8.99219H15ZM3 12.9922H5V10.9922H3V12.9922ZM11 12.9922H13V10.9922H11V12.9922ZM7 6.99219H1V0.992188H7V6.99219ZM15 6.99219H9V0.992188H15V6.99219ZM3 4.99219H5V2.99219H3V4.99219ZM11 4.99219H13V2.99219H11V4.99219Z"
        />
      </svg>
       Label 3 
    </button>
  </fieldset>
</div>
`;

exports[`Toggle examples NovaToggleWithTrailingIconComponent should render correctly 1`] = `
<div>
  <fieldset
    class="v-toggle-container"
    v-toggle-container=""
  >
    <button
      active=""
      aria-pressed="true"
      class="v-toggle v-gap-6"
      type="button"
      v-toggle=""
      vgap="6"
    >
       Label 1 
      <svg
        aria-hidden="true"
        class="v-icon v-icon-map-location v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-map-location-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-secondary"
          d="M8 4C9.10457 4 10 4.89543 10 6C10 7.10457 9.10457 8 8 8C6.89543 8 6 7.10457 6 6C6 4.89543 6.89543 4 8 4Z"
        />
        <path
          class="v-icon-primary"
          d="M8.48145 0C11.5292 0.000167496 13.9998 2.47082 14 5.51855C14 6.67384 13.6758 7.80644 13.0635 8.78613L8 16.8867L2.93652 8.78613C2.32425 7.80644 2 6.67384 2 5.51855C2.00017 2.47082 4.47082 0.000167494 7.51855 0H8.48145ZM7.51855 2C5.57539 2.00017 4.00017 3.57539 4 5.51855C4 6.2989 4.21931 7.06382 4.63281 7.72559L8 13.1133L11.3672 7.72559C11.7807 7.06382 12 6.2989 12 5.51855C11.9998 3.57539 10.4246 2.00017 8.48145 2H7.51855Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
    <button
      aria-pressed="false"
      class="v-toggle v-gap-6"
      type="button"
      v-toggle=""
      vgap="6"
    >
       Label 2 
      <svg
        aria-hidden="true"
        class="v-icon v-icon-tiny v-icon-view-list v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-view-list-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M6 8.99219V14.9922H0V8.99219H6ZM2 12.9922H4V10.9922H2V12.9922ZM16 12.9922H8V10.9922H16V12.9922ZM6 6.99219H0V0.992188H6V6.99219ZM2 4.99219H4V2.99219H2V4.99219ZM16 4.99219H8V2.99219H16V4.99219Z"
        />
      </svg>
    </button>
    <button
      aria-pressed="false"
      class="v-toggle v-gap-6"
      type="button"
      v-toggle=""
      vgap="6"
    >
       Label 3 
      <svg
        aria-hidden="true"
        class="v-icon v-icon-tiny v-icon-view-grid v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-view-grid-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M7 14.9922H1V8.99219H7V14.9922ZM15 8.99219V14.9922H9V8.99219H15ZM3 12.9922H5V10.9922H3V12.9922ZM11 12.9922H13V10.9922H11V12.9922ZM7 6.99219H1V0.992188H7V6.99219ZM15 6.99219H9V0.992188H15V6.99219ZM3 4.99219H5V2.99219H3V4.99219ZM11 4.99219H13V2.99219H11V4.99219Z"
        />
      </svg>
    </button>
  </fieldset>
</div>
`;

exports[`Toggle examples SingleSelectRadioButtonToggleComponent should render correctly 1`] = `
<div>
  <fieldset
    class="v-toggle-container"
    v-toggle-container=""
  >
    <label
      class="v-toggle v-gap-6"
      for="a-v-radio-0"
      v-toggle=""
      vgap="6"
    >
      <input
        checked=""
        class="v-radio"
        id="a-v-radio-0"
        name="a-v-toggle-0"
        type="radio"
        v-radio=""
        value="a-v-radio-3"
      />
      Label 1
    </label>
    <label
      class="v-toggle v-gap-6"
      for="a-v-radio-1"
      v-toggle=""
      vgap="6"
    >
      <input
        class="v-radio"
        id="a-v-radio-1"
        name="a-v-toggle-0"
        type="radio"
        v-radio=""
        value="a-v-radio-4"
      />
      Label 2
    </label>
    <label
      class="v-toggle v-gap-6"
      for="a-v-radio-2"
      v-toggle=""
      vgap="6"
    >
      <input
        class="v-radio"
        id="a-v-radio-2"
        name="a-v-toggle-0"
        type="radio"
        v-radio=""
        value="a-v-radio-5"
      />
      Label 3
    </label>
  </fieldset>
</div>
`;

exports[`Toggle examples TemplateDrivenFormToggleComponent should render correctly 1`] = `
<div>
  <form
    class="ng-untouched ng-pristine ng-valid v-flex v-flex-col v-mt-16"
    novalidate=""
    vflex=""
    vflexcol=""
    vmt="16"
  >
    <fieldset
      aria-labelledby="toggle-template-group-label toggle-template-error-message"
    >
      <legend
        class="v-label v-typography-label"
        id="toggle-template-group-label"
        v-label=""
        vtypography="label"
      >
         Group label (required) 
      </legend>
      <div
        aria-invalid="false"
        class="v-toggle-container ng-untouched ng-pristine ng-valid v-gap-0 v-flex v-flex-row"
        name="toggle-template-group"
        required=""
        v-toggle-container=""
        vflex=""
        vgap="0"
      >
        <button
          aria-pressed="false"
          class="v-toggle v-gap-6"
          type="button"
          v-toggle=""
          value="1"
          vgap="6"
        >
          Label 1
        </button>
        <button
          aria-pressed="false"
          class="v-toggle v-gap-6"
          type="button"
          v-toggle=""
          value="2"
          vgap="6"
        >
          Label 2
        </button>
        <button
          aria-pressed="false"
          class="v-toggle v-gap-6"
          type="button"
          v-toggle=""
          value="3"
          vgap="6"
        >
          Label 3
        </button>
      </div>
      <span
        aria-atomic="true"
        aria-live="assertive"
        class="v-input-message"
        id="toggle-template-error-message"
        v-input-message=""
      >
        
      </span>
    </fieldset>
    <div
      class="v-gap-16 v-flex v-flex-row v-mt-12"
      vflex=""
      vgap="16"
      vmt="12"
    >
      <button
        class="v-button"
        type="submit"
        v-button=""
      >
        Submit
      </button>
      <button
        buttoncolor="secondary"
        class="v-button v-button-secondary"
        type="reset"
        v-button=""
      >
         Reset 
      </button>
    </div>
  </form>
  <code>
    templateFormValidation.value['toggle-template-group']: undefined

  </code>
</div>
`;
